# telemetry-monitor

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  app.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/: index.html
client/css/: style.css
client/js/: animation.js  charts_draw.js  csv_parser.js  data_processors.js  file_processor.js  helpers.js  index.js  map_draw.js  misc.js
css/: style.css
data/: sample.csv
embedded_server_proto/: CMakeLists.txt
embedded_server_proto/src/: file_processor.hpp  session_processor.hpp  websocket_server.cpp
public/: bundle.js  index.html
public/css/: style.css
server/: app.ts
src/client/: IDataProcessor.ts  IGlobalState.ts  IMeasurement.ts  IoProcessors.ts  animation.ts  chartsDraw.ts  csvParser.ts  csv_parser.js  dataProcessors.ts  globalStateDef.ts  index.html  index.js  index.ts  mapDraw.ts  map_draw.js  misc.js  misc.ts
src/client/callbacks/: ICallbacks.ts  buttonsCallbacks.ts  playerCallbacks.ts
src/client/css/: style.css
src/client/js/: animation.js  charts_draw.js  data_processors.js  index.js  map_draw.js
src/server/: app.js  app.ts
